# parallel-translation

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  PROFILING.md  README.md  TODO.txt  conanfile.py  test.txt
conan/: allow_gcc16.py
conan/recipes/morpheus/: conanfile.py
mk/: build.mk  conan.mk  profile.mk  quality.mk
skills/parallel-translation/: SKILL.md
src/: app.cpp  config.cpp  config.hpp  main.cpp  reader.hpp  tokenizer.hpp  translator.hpp  writer.hpp
src/common/: exit_codes.hpp  process.cpp  process.hpp  scope_exit.hpp  tokenizer.hpp
src/formatters/: formatter.hpp  plain.cpp
src/readers/: pdf.cpp  reader.hpp  sentence_splitter.cpp  sentence_splitter.hpp  txt.cpp
src/text/: text.cpp  text.hpp
src/translators/: chat_api.cpp  morpheus.cpp  morpheus.hpp  ollama.cpp  ollama.hpp  pass.cpp  stub.cpp
src/writers/: formatted_writer.cpp  formatted_writer.hpp  pdf.cpp  pdf.hpp  txt.cpp
tests/: CMakeLists.txt  test_helpers.hpp  test_integration.cpp  test_pdf_writer.cpp  test_reader.cpp  test_text.cpp  test_tokenizer.cpp  test_translator.cpp
tests/assets/: latin_example.txt
tools/: analyze_hyperfine_compare.py
